# autoware_system_designer

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pre-commit-lint-wrapper.sh  .yamllint.yaml  README.md  action.yaml  autoware_architect.instructions.md  autoware_system_designer.instructions.md  build_depends.repos  generate_mock_snapshot.py  generate_node_design.py  generate_system_structure.py  pyproject.toml  setup.py
autoware_system_designer/: CMakeLists.txt  autoware_system_designer-extras.cmake  package.xml  pyproject.toml  requirements.txt  setup.py
autoware_system_designer/autoware_system_designer/: __init__.py  deploy.py  deployment.py  deployment_config.py  exceptions.py
autoware_system_designer/autoware_system_designer/builder/: __init__.py  config_registry.py  deployment_instance.py  event_manager.py  instance_pipeline.py  instance_serializer.py  instance_tree.py  instances.py  launcher_generator.py  link_manager.py  parameter_manager.py  parameter_resolver.py  parameter_set_applier.py  parameter_template_generator.py
autoware_system_designer/autoware_system_designer/builder/config/: config_registry.py  launch_manager.py
autoware_system_designer/autoware_system_designer/builder/graph/: event_manager.py  launch_manager.py  link_manager.py
autoware_system_designer/autoware_system_designer/builder/instances/: instance_pipeline.py  instance_serializer.py  instance_tree.py  instances.py  launcher_planner.py  node_groups.py
autoware_system_designer/autoware_system_designer/builder/parameters/: parameter_manager.py  parameter_resolver.py  parameter_set_applier.py  parameter_template_generator.py
autoware_system_designer/autoware_system_designer/builder/resolution/: connection_resolver.py  connection_utils.py  variant_resolver.py
autoware_system_designer/autoware_system_designer/builder/runtime/: events.py  execution.py  links.py  namespace.py  parameters.py  ports.py
autoware_system_designer/autoware_system_designer/building/: __init__.py  deployment_instance.py  instance_assembler.py
autoware_system_designer/autoware_system_designer/building/config/: __init__.py  config_registry.py  launch_manager.py
autoware_system_designer/autoware_system_designer/building/graph/: link_manager.py
autoware_system_designer/autoware_system_designer/building/instances/: __init__.py  instance_tree.py  instances.py  node_groups.py
autoware_system_designer/autoware_system_designer/building/parameters/: parameter_manager.py  parameter_resolver.py  parameter_set_applier.py
autoware_system_designer/autoware_system_designer/cli/: __init__.py  lint.py
autoware_system_designer/autoware_system_designer/deployment/: __init__.py  _deploy_variant_launchers.py  _input_resolution.py  _mode_selection.py  _modes.py  _system_structure.py  deploy_launchers.py  deployment_config.py  deployment_modes.py  modes.py  parser.py
autoware_system_designer/autoware_system_designer/experimental/: models.py  test.py
autoware_system_designer/autoware_system_designer/exporting/: __init__.py  instance_to_json.py  json_io.py  schema.py
autoware_system_designer/autoware_system_designer/file_io/: __init__.py  source_location.py  system_structure_json.py  template_renderer.py
autoware_system_designer/autoware_system_designer/linter/: __init__.py  __main__.py  file_linter.py  naming_linter.py  report.py  run_lint.py  structure_linter.py
autoware_system_designer/autoware_system_designer/models/: __init__.py  config.py  domain.py  events.py  json_schema_loader.py  links.py  parameters.py  ports.py  system_structure.py  yaml_schema.py
autoware_system_designer/autoware_system_designer/parsers/: data_parser.py  data_validator.py  yaml_parser.py
autoware_system_designer/autoware_system_designer/parsing/: __init__.py  config.py  json_schema_loader.py
autoware_system_designer/autoware_system_designer/resolvers/: connection_utils.py  inheritance_resolver.py  variant_resolver.py
autoware_system_designer/autoware_system_designer/ros2_launcher/: __init__.py  component_map.py  direct_launcher.py  generate_module_launcher.py  generate_node_launcher.py  generator.py
autoware_system_designer/autoware_system_designer/runtime/: README.md  __init__.py  builder.py  composable_actor.py  container_actor.py  coordinator.py  events.py  launch_runner.py  params.py  process.py  regular_actor.py  ros2_launch_runner.py  state.py  stdin_console.py  system_runner.py
autoware_system_designer/autoware_system_designer/schema/: __init__.py  module-v0.3.0.json  parameter_set-v0.2.1.json  system-v0.2.1.json  yaml_schema.py
autoware_system_designer/autoware_system_designer/template/: __init__.py  parameter_set.yaml.jinja2  parameter_template_generator.py
autoware_system_designer/autoware_system_designer/utils/: __init__.py  build_script_generator.py  format_version.py  logging_utils.py  naming.py  parameter_types.py  source_location.py  system_structure_json.py  template_utils.py
autoware_system_designer/autoware_system_designer/visualization/: deployment_overview.html  launch_commands_page.py  visualization_guide.py  visualization_index.py  visualize_deployment.py
autoware_system_designer/autoware_system_designer/workspace/: __init__.py  ament.py
autoware_system_designer/cmake/: autoware_system_designer_build_deploy.cmake  autoware_system_designer_generate_launcher.cmake  autoware_system_designer_parameter.cmake
autoware_system_designer/doc/: format.md  index.md  manifest.md  memo.md  package.md  types.md
autoware_system_designer/script/: collect_system_design_manifests.py  deployment_process.py  generate_node_launcher.py  generate_visualization_index.py  parameter_process.py  run_deploy_with_policy.py  run_workspace_linter.py  system_designer_runner.py  tee_run.py
autoware_system_designer/template/launcher/: component_launcher.xml.jinja2
(+288 files in other folders)
